# SuiteSparse

./: CMakeLists.txt  Makefile
AMD/: CMakeLists.txt
CAMD/: CMakeLists.txt
CCOLAMD/: CMakeLists.txt
CHOLMOD/: CMakeLists.txt
CHOLMOD/Partition/: cholmod_metis.c
COLAMD/: CMakeLists.txt
Project/AMD/: AMD.vcxproj
Project/CAMD/: CAMD.vcxproj
Project/CCOLAMD/: CCOLAMD.vcxproj
Project/CHOLMOD_shared/: CHOLMOD_shared.vcxproj  CHOLMOD_shared.vcxproj.filters
Project/COLAMD/: COLAMD.vcxproj
cmake/: SuiteSparseConfig.cmake.in
